--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/main.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/all.min.css">
   <title>AXL | زهير</title>
 
@@ -24,7 +26,7 @@
       <ul>
         <li><a href="#aboutMe">About</a></li>
         <li><a href="#skill">Skills</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li><a href="#">عربي</a></li>
       </ul>
     </div>
@@ -36,9 +38,9 @@
       <div class="info">
         <h1>Zouhair</h1>
         <p>Hey There<br>
-          My name is zouhair. This is my profile, and I will take you to a travel to my website
+          My name is zouhair, this is my profile. <br>Here I'm gonna share everything about my skills.
         </p>
-        <button><a href="#aboutMe">show more</a></button>
+        <a href="#aboutMe">Show More</a>
       </div>
     </div>
   </div>
@@ -49,7 +51,7 @@
       <h2 class="heading">About Me</h2>
       <div class="info">
         <p>A Web Developer specialized in Front-End development<br>
-          Programming languages including HTML CSS JavaScript Python SQLite3 and Flask framework.
+          Programming languages including HTML CSS JavaScript Python SQLite3 and Flask framework.<br>
           Basics of C and C++ programming,
           and other skills such as Command-Line, computer knowledge <br><br>
           A strong background in Photoshop and Video Editing.
@@ -104,31 +106,68 @@
       <h2 class="heading">Showcase</h2>
       <div class="content">
         <div class="cont">
-          <h3>Leon Template</h3>
-          <p>Hello there. We are Leon - Super creative & Minimal Agency Web Template</p>
-          <button>Show More</button>
+          <img src="images/leon.jpg" alt="leon logo">
+          <div class="info">
+            <h3>Leon Template</h3>
+            <p>Hello there. We are Leon - Super creative & Minimal Agency Web Template</p>
+            <a href="#">Show More</a>
+          </div>
         </div>
         <div class="cont">
-          <h3>Codepipe Template</h3>
-          <p>Learn to code by playing games. Github is the platform for your favorite web development games.</p>
-          <button>Show More</button>
+          <img src="images/codepipe.jpg" alt="codepipe logo">
+          <div class="info">
+            <h3>Codepipe Template</h3>
+            <p>Learn to code by playing games. Github is the platform for your favorite web development games.</p>
+            <a href="#">Show More</a>
+          </div>
         </div>
         <div class="cont">
-          <h3>Messenger</h3>
-          <p>An application look like Facebook Messenger, but this made by Python programming with Object-Oriented
-            programming (OOP) and database.</p>
-          <button>Show More</button>
+          <img src="images/messenger.jpg" alt="messenger logo">
+          <div class="info">
+            <h3>Messenger</h3>
+            <p>An application look like Facebook Messenger, but this made by Python programming with Object-Oriented
+              programming (OOP) and database.</p>
+            <a href="#">Show More</a>
+          </div>
         </div>
         <div class="cont">
-          <h3>Database</h3>
-          <p>This is SQLite3 database in Python used from the terminal to store messages</p>
-          <button>Show More</button>
+          <img src="images/databases.jpg" alt="messenger logo">
+          <div class="info">
+            <h3>Simple Database</h3>
+            <p>This is a simple SQLite3 database made by Python programming used from the terminal to store messages</p>
+            <a href="#">Show More</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <!-- End Showcase -->
   <!-- Start Footer -->
+  <div class="footer section-padding" id="contact">
+    <div class="container">
+      <h3>Contact Me: <a href="mailto:zouhairkhalid26@mail.com?subject=Contact"
+          class="link">zouhairkhalid26@gmail.com</a></h3>
+      <h3>Find me on:</h3>
+      <div class="social">
+        <a href="http://www.instagram.com" target="_blank">
+          <span><i class="fa-brands fa-instagram"></i>Instagram</span>
+        </a>
+        <a href="http://www.twitter.com" target="_blank">
+          <span><i class="fa-brands fa-twitter"></i>Twitter</span>
+        </a>
+        <a href="http://github.com/zouhaeir" target="_blank">
+          <span><i class="fa-brands fa-github"></i>Github</span>
+        </a>
+        <a href="me.telegram.me/sfd" target="_blank">
+          <span><i class="fa-brands fa-telegram"></i>Telegram</span>
+        </a>
+        <a href="http://github.com/zouhaeir" target="_blank">
+          <span><i class="fa-brands fa-whatsapp"></i>WhatsApp</span>
+        </a>
+      </div>
+      <h3>&copy 2023 - <span>Zouhair</span> All Rights Reserved</h3>
+    </div>
+  </div>
   <!-- End Footer -->
   <script type="text/javascript">
   </script>
