--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="CyberY">
+  <meta property="og:description" content="Cyber Security Researcher | Security Analyst | Penetration Tester | Purple Teamer ">
+  <meta name="description" content="Cyber Security Researcher | Security Analyst | Penetration Tester | Purple Teamer ">
+
+  
   <link rel="icon" href="images/icon.png">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
