--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="CyberY">
+  <meta property="og:title" content="Zouhair">
   <meta property="og:description" content="Cyber Security Researcher | Security Analyst | Penetration Tester | Purple Teamer ">
   <meta name="description" content="Cyber Security Researcher | Security Analyst | Penetration Tester | Purple Teamer ">
 
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/all.min.css">
-  <title>AXL | زهير</title>
+  <title>zouhair khalid</title>
 
 </head>
 
