--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Zouhair">
-  <meta property="og:description" content="Cyber Security Researcher | Security Analyst | Penetration Tester | Purple Teamer ">
-  <meta name="description" content="Cyber Security Researcher | Security Analyst | Penetration Tester | Purple Teamer ">
 
-  
-  <link rel="icon" href="images/icon.png">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Zouhair Khalid">
+  <meta property="og:description" content="Front-End Developer | Software Developer | Linux Administartion | Desinger">
+  <meta property="og:image" href="images/favicon.ico">
+
+  <title>Zouhair Khalid</title>
+  <meta name="description" content="Front-End Developer | Software Developer | Linux Administartion | Desinger">
+  <link rel="shortcut icon" type="image/x-icon" href="images/icon.png">
+
+  <!-- Normalize the body  -->
   <link rel="stylesheet" href="css/normalize.css">
+  <!-- Main Style  -->
   <link rel="stylesheet" href="css/main.css">
+  <!-- Font Awesome library -->
   <link rel="stylesheet" href="css/all.min.css">
-  <title>zouhair khalid</title>
 
 </head>
 
@@ -58,8 +63,8 @@
       <h2 class="heading">About Me</h2>
       <div class="info">
         <p>A Web Developer specialized in Front-End development</p>
-        <p>Programming languages including HTML CSS JavaScript Python SQLite3 and Flask framework.</p>
-        <p>Basics of C and C++ programming, and other skills such as Command-Line, computer knowledge</p><br>
+        <p>Programming languages including HTML, CSS, JavaScript, Python, and SQLite3, Flask frameworks.</p>
+        <p>Basics of C and C++ programming, and other skills such as Linux Administartion, Networking</p><br>
         <p>A strong background in Photoshop and Video Editing.</p>
 
       </div>
@@ -157,6 +162,11 @@
         <div class="link">
           <a href="http://www.instagram.com/axldev26" target="_blank">
             <span><i class="fa-brands fa-instagram"></i>Instagram</span>
+          </a>
+        </div>
+        <div class="link">
+          <a href="http://facebook.com/axlcorp" target="_blank">
+            <span><i class="fa-brands fa-facebook"></i>Facebook</span>
           </a>
         </div>
         <div class="link">
